--- a/code/thad/data/PE04/src/tsconfig.json
+++ b/code/thad/data/PE04/src/tsconfig.json
@@ -1,7 +1,7 @@
 {
-    "compilerOptions": {
-        "target":"ES2018",
-        "outDir":"./dist",
-        "rootDir":"./src"
+    //"compilerOptions": {
+        //"target":"ES2018",
+        //"outDir":"./dist",
+        //"rootDir":"./src"
     }
 }
